# typing-cli

./: Cargo.toml  README.md  words.json
src/: main.rs
